add coment in add read html

--- a/apps/drec-angular-ui/src/app/view/meter-read/addread/addread.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/addread/addread.component.html
@@ -11,7 +11,7 @@
 
         </mat-card-header>
         <hr class="mb-0 pb-0">
-
+<!-- 
         <mat-card-content>
            
                 <div class="d-flex">
@@ -22,7 +22,7 @@
                 </div>
             
 
-        </mat-card-content>
+        </mat-card-content> -->
         <form [formGroup]="readForm" (ngSubmit)="onSubmit()">
             <mat-card-content>
                 <div class="example-container1 row">
