change energy link and redemption report haedinge

--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
@@ -348,7 +348,7 @@
 								<div>
 									<a matTooltip="Link to Certificate" [matTooltipPosition]="'right'"
 										aria-label="Button that displays a tooltip when focused or hovered over"
-										style="text-align: right;" href={{energyurl+item.creationBlockHash}}
+										style="text-align: right;" href={{item.energyurl}}
 										target="_blank" class="certificate-text d-flex text-capitalize">
 										<mat-icon class="mt-1">card_membership</mat-icon>
 										<div class="certificate-id-text">
