--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
@@ -23,7 +23,7 @@
 
 			<!-- <samp style="text-align: center;">groupId:<i>{{group_uid}}</i></samp>
 		 -->
-			<mat-card class="innermat-card example-card1 border">
+			<mat-card class="innermat-card example-card1 border" *ngIf="reservationstatus">
 				<mat-card-header class="">
 					<div class="col-12">
 						<mat-card-title class=" d-flex justify-content-between align-items-center">
@@ -31,7 +31,7 @@
 						</mat-card-title>
 					</div>
 				</mat-card-header>
-				<mat-card-content>
+				<mat-card-content >
 
 					<div>
 						<h4 style="text-align: center;color:#f2be1a; font-size: 15px;">Ongoing Next Issuance cycle</h4>
