--- a/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
@@ -48,7 +48,7 @@
             <td mat-cell *matCellDef="let row;let i=index"> {{row.createdAt| date:'EEE d MMM y hh:mm:ss'}} </td>
           </ng-container>
           <ng-container matColumnDef="projectName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> projectName </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Project Name </th>
             <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
           </ng-container>
           <ng-container matColumnDef="externalId">
@@ -66,7 +66,7 @@
         
 
           <ng-container matColumnDef="fuelCode">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> FuelCode </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Fuel Code </th>
             <td mat-cell *matCellDef="let element"> {{element.fuelname}} </td>
           </ng-container>
           <!-- Status Column -->
@@ -75,7 +75,7 @@
             <td mat-cell *matCellDef="let element"> {{element.commissioningDate}} </td>
           </ng-container>
           <ng-container matColumnDef="capacity">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> capacity </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity(Kw) </th>
             <td mat-cell *matCellDef="let element"> {{element.capacity}} </td>
           </ng-container>
           <ng-container matColumnDef="actions">
