--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -176,7 +176,7 @@
                 <!-- Fruit Column -->
                 <ng-container matColumnDef="reservationActive">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                        <td mat-cell *matCellDef="let row"> {{row.reservationActive}} </td>
+                        <td mat-cell *matCellDef="let row"><p *ngIf="row.reservationActive">Active</p> <p *ngIf="!row.reservationActive">Deactive</p> </td>
                     </ng-container>
                 <!-- Progress Column -->
                 <!-- <ng-container matColumnDef="capacityRange">
