--- a/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/alldevices/alldevices.component.html
@@ -5,7 +5,7 @@
 
       <div>
         <mat-card-title>
-          <h2 class="pb-0 mb-0 fw-bold text-capitalize ps-2">List
+          <h2 class="pb-0 mb-0 fw-bold text-capitalize ps-2">My All Devices
           </h2>
       </mat-card-title>
       </div>
@@ -72,7 +72,7 @@
           <!-- Status Column -->
           <ng-container matColumnDef="commissioningDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Commissioning Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.commissioningDate}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.commissioningDate| date:'EEE d MMM y hh:mm:ss'}} </td>
           </ng-container>
           <ng-container matColumnDef="capacity">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity(Kw) </th>
