--- a/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
@@ -257,7 +257,7 @@
                                 <div class="example-container1 row" *ngIf="addmoredetals[i]">
                                     <div class="col-md-3">
                                         <mat-radio-group formControlName='gridInterconnection'>
-                                            <span>grid Inter connection:</span>
+                                            <span>Grid Inter-connection:</span>
 
                                             <mat-radio-button [value]=true>Yes</mat-radio-button>
                                             <mat-radio-button [value]=false>No</mat-radio-button>
