--- a/apps/drec-angular-ui/src/app/view/meter-read/addread/addread.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/addread/addread.component.html
@@ -41,7 +41,7 @@
                         </mat-form-field>
                     </div>
                     <div class="col-md-3">
-                        <mat-form-field appearance="outline">
+                        <!-- <mat-form-field appearance="outline">
                             <mat-label>TimeZone</mat-label>
                             <input type="text" placeholder="Please Enter timezone" aria-label="Number" matInput
                                 formControlName="timezone" [matAutocomplete]="auto">
@@ -50,7 +50,20 @@
                                     {{option}}
                                 </mat-option>
                             </mat-autocomplete>
+                        </mat-form-field> -->
+                        <mat-form-field  appearance="outline">
+                            <mat-label class="text-capitalize">Select Timezone</mat-label>
+                            <input type="text" placeholder="Please Enter Timezone" aria-label="text"
+                                matInput formControlName="timezone" [matAutocomplete]="auto" >
+                            <mat-autocomplete #auto="matAutocomplete">
+                                <mat-option *ngFor="let code of filteredOptions | async" [value]="code.name">
+                                    {{code.name}}
+                                </mat-option>
+                               
+                            </mat-autocomplete>
+                            <mat-error *ngIf="showerror"> no Timezone avalable</mat-error>
                         </mat-form-field>
+                       
                     </div>
                     <div class="col-md-3">
 
